--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -25,7 +25,19 @@ font:
     family: Source Code Pro
     style: Italic
 
-  size: 8.0
+  size: 9.0
+
+
+scrolling:
+  history: 30000
+  multiplier: 3
+  
+
+shell: 
+  #program: /bin/fish
+  program: /bin/bash
+  args:
+    - --login
 
 
 colors:
@@ -54,3 +66,8 @@ colors:
     magenta:    '0xF6A73B'
     cyan:       '0xFAD42E'
     white:      '0xedc29a'
+
+
+draw_bold_text_with_bright_colors: true
+save_to_clipboard: true
+#background_opacity: 0.915
