--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -68,3 +68,8 @@ colors:
 draw_bold_text_with_bright_colors: true
 save_to_clipboard: true
 #background_opacity: 0.915
+debug:
+  # Display the time it takes to redraw each frame.
+  render_timer: false 
+
+
