--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -28,9 +28,9 @@ font:
 scrolling:
   history: 30000
   multiplier: 3
-  
 
-shell: 
+
+shell:
   #program: /bin/fish
   program: /bin/bash
   args:
@@ -67,9 +67,9 @@ colors:
 
 draw_bold_text_with_bright_colors: true
 save_to_clipboard: true
-#background_opacity: 0.915
+background_opacity: 0.915
 debug:
   # Display the time it takes to redraw each frame.
-  render_timer: false 
+  render_timer: false
 
 
