--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -8,6 +8,8 @@ key_bindings:
   - { key: Plus,     mods: Control,       action: IncreaseFontSize }
   - { key: Minus,    mods: Control,       action: DecreaseFontSize }
   - { key: Minus,    mods: Control,       action: DecreaseFontSize }
+  - { key: PageUp,   mods: Control|Shift, action: ScrollLineUp     }
+  - { key: PageDown, mods: Control|Shift, action: ScrollLineDown   }
 
 font:
   normal:
@@ -68,6 +70,8 @@ colors:
 draw_bold_text_with_bright_colors: true
 save_to_clipboard: true
 background_opacity: 0.88
+dynamic_title: true
+
 debug:
   # Display the time it takes to redraw each frame.
   render_timer: false
