--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,3 +1,6 @@
+import:
+  - ~/.config/alacritty/colorschemes.yml
+
 key_bindings:
     # (Windows, Linux, and BSD only)
   - { key: V,        mods: Control|Shift, action: Paste            }
@@ -37,35 +40,6 @@ shell:
   program: /bin/bash
   args:
     - --login
-
-
-colors:
-  primary:
-    #background: '0x0a1124'
-    background: '0x191615'
-    foreground: '0xedc29a'
-  cursor:
-    text:       '0x0a1124'
-    cursor:     '0xedc29a'
-  normal:
-    black:      '0x0a1124'
-    red:        '0x63504E'
-    green:      '0xA33A4E'
-    yellow:     '0xEB3247'
-    blue:       '0xF35743'
-    magenta:    '0xF6A73B'
-    cyan:       '0xFAD42E'
-    white:      '0xedc29a'
-  bright:
-    black:      '0xa5876b'
-    red:        '0x63504E'
-    green:      '0xA33A4E'
-    yellow:     '0xEB3247'
-    blue:       '0xF35743'
-    magenta:    '0xF6A73B'
-    cyan:       '0xFAD42E'
-    white:      '0xedc29a'
-
 
 draw_bold_text_with_bright_colors: true
 save_to_clipboard: true
