--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -32,6 +32,11 @@ blur-background = true;
 #blur-kern = "7,7,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # <<< blur <<<
 
+#opacity-rule = [
+    #"90:class_g = 'Firefox' && (!focused)",
+    #"90:class_g = 'Firefox' && !fullscreen",
+#];
+
 # >>> window rules >>>
 wintypes:
 {
