--- a/.config/powerline/config.json
+++ b/.config/powerline/config.json
@@ -17,7 +17,7 @@
 			"theme": "default"
 		},
 		"shell": {
-			"colorscheme": "solarized",
+			"colorscheme": "garuda",
 			"theme": "default_leftonly",
 			"local_themes": {
 				"continuation": "continuation",
