--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -10,15 +10,15 @@ fade-out-step = 0.03;
 
 # >>> corners (not enabled in this version) >>>
 detect-rounded-corners = true;
-corner-radius = 4;
+corner-radius = 5;
 # <<< corners <<<
 
 # >>> shadows >>>
 shadow = true;
-#shadow-opacity = 0.9;
+shadow-opacity = 0.0;
 shadow-radius = 6;
-shadow-offset-x = -1;
-shadow-offset-y = -1;
+shadow-offset-x = 0;
+shadow-offset-y = 0;
 shadow-exclude = [
     "name *?= 'rofi'"
 ];
