removing rouded corners

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -10,7 +10,11 @@ fade-out-step = 0.03;
 
 # >>> corners (not enabled in this version) >>>
 detect-rounded-corners = true;
-corner-radius = 5;
+corner-radius = 0;
+rouded-corners-exclude = [
+    #"x = 10 && y = 10 && override_redirect = true"
+    "class_g * = 'qtile'"
+]
 # <<< corners <<<
 
 # >>> shadows >>>
