major revamp of the UI

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -13,7 +13,7 @@ detect-rounded-corners = true;
 corner-radius = 0;
 rouded-corners-exclude = [
     #"x = 10 && y = 10 && override_redirect = true"
-    "class_g * = 'qtile'"
+    #"class_g * = 'qtile'"
 ]
 # <<< corners <<<
 
@@ -31,7 +31,7 @@ shadow-exclude = [
 # >>> blur >>>
 #blur-method = "kernel";
 blur-method = "dual_kawase";
-blur-strength = 7;
+blur-strength = 5;
 blur-background = true;
 #blur-kern = "7,7,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # <<< blur <<<
