--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,6 @@
 import:
-  - ~/.config/alacritty/colorschemes.yml
+#  - ~/.config/alacritty/colorschemes.yml
+  - ~/.config/alacritty/colorthemes/dracula.yml
 
 env:
   TERM: xterm-256color
