--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Sweet-mars
-gtk-icon-theme-name=Sweet-Rainbow
+gtk-theme-name=dracula
+gtk-icon-theme-name=dracula-icons
 gtk-font-name=Source Code Pro 9
 gtk-cursor-theme-name=Sweet-cursors
 gtk-cursor-theme-size=0
