--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -32,6 +32,7 @@ shadow-exclude = [
 #blur-method = "kernel";
 blur-method = "dual_kawase";
 blur-strength = 5;
+blur-size = 30;
 blur-background = true;
 #blur-kern = "7,7,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # <<< blur <<<
