--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,6 +1,7 @@
 import:
 #  - ~/.config/alacritty/colorschemes.yml
-  - ~/.config/alacritty/colorschemes/dracula.yml
+#  - ~/.config/alacritty/colorschemes/dracula.yml
+  - ~/.config/alacritty/colorschemes/gruvbox.yml
 
 env:
   TERM: xterm-256color
@@ -50,7 +51,7 @@ shell:
 
 draw_bold_text_with_bright_colors: true
 save_to_clipboard: true
-background_opacity: 1.0 
+background_opacity: 0.7 
 dynamic_title: true
 
 debug:
