--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -15,47 +15,56 @@ key_bindings:
   - { key: Equals,   mods: Control,       action: IncreaseFontSize }
   - { key: Plus,     mods: Control,       action: IncreaseFontSize }
   - { key: Minus,    mods: Control,       action: DecreaseFontSize }
-  - { key: Minus,    mods: Control,       action: DecreaseFontSize }
   - { key: PageUp,   mods: Control|Shift, action: ScrollLineUp     }
   - { key: PageDown, mods: Control|Shift, action: ScrollLineDown   }
+
+shell:
+  program: /bin/bash
+  args:
+    - --login
 
 font:
   normal:
     #family: Source Code Pro
-    family: SauceCodePro Nerd Font
+    #family: SauceCodePro Nerd Font
+    family: TamzenForPowerline
     style: Regular
 
   bold:
     #family: Source Code Pro
-    family: SauceCodePro Nerd Font
-    style: Bold
+    #family: SauceCodePro Nerd Font
+    family: TamzenForPowerline
+    style: Regular
 
   italic:
     #family: Source Code Pro
-    family: SauceCodePro Nerd Font
+    #family: SauceCodePro Nerd Font
+    family: TamzenForPowerline
     style: Italic
 
-  size: 10
+  size: 12
 
+#cursor:
+#  style:
+#    shape: Block
+#    blinking: Off
+
+window:
+  dynamic_padding: true
+  padding:
+    x: 0
+    y: 0
 
 scrolling:
   history: 30000
   multiplier: 3
 
-
-shell:
-  #program: /bin/fish
-  program: /bin/bash
-  args:
-    - --login
-
 draw_bold_text_with_bright_colors: true
 save_to_clipboard: true
-background_opacity: 0.8 
+background_opacity: 0.5
 dynamic_title: true
 
 debug:
   # Display the time it takes to redraw each frame.
   render_timer: false
-
 
